[package]
name = "filter-logger"
description = "A simple filtering logger which will filter based on module-path."
version = "0.3.0"
authors = ["Michael Micucci <micucci@fox-den.org>"]
edition = "2018"
repository = "http://github.com/kitsuneninetails/filter-logger-rust"
license = "MIT"
readme = "README.md"
keywords = ["logger", "filter", "filter-logger" ]

[dependencies]
chrono = "0.4"
lazy_static = "1.2"
log = {version="0.4", features=["std"]}
